load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "debounce.go",
        "every.go",
        "multilock.go",
        "scatter.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v3/async",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "benchmark_test.go",
        "debounce_test.go",
        "every_test.go",
        "multilock_test.go",
        "scatter_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
