load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("//tools:go_image.bzl", "go_image_alpine", "go_image_debug")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "usage.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/flags:go_default_library",
        "//beacon-chain/node:go_default_library",
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "//shared/featureconfig:go_default_library",
        "//shared/logutil:go_default_library",
        "//shared/maxprocs:go_default_library",
        "//shared/version:go_default_library",
        "@com_github_ethereum_go_ethereum//log:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@com_github_urfave_cli_v2//altsrc:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

go_image(
    name = "image",
    srcs = [
        "main.go",
        "usage.go",
    ],
    base = select({
        "//tools:base_image_alpine": "//tools:alpine_cc_image",
        "//tools:base_image_cc": "//tools:cc_image",
        "//conditions:default": "//tools:cc_image",
    }),
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain",
    race = "off",
    static = "off",  # Static enabled binary seems to cause issues with DNS lookup with cgo.
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "//beacon-chain/flags:go_default_library",
        "//beacon-chain/node:go_default_library",
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "//shared/featureconfig:go_default_library",
        "//shared/logutil:go_default_library",
        "//shared/version:go_default_library",
        "@com_github_ethereum_go_ethereum//log:go_default_library",
        "@com_github_ipfs_go_log_v2//:go_default_library",
        "@com_github_joonix_log//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@com_github_urfave_cli_v2//altsrc:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
        "//shared/maxprocs:go_default_library",
    ],
)

container_bundle(
    name = "image_bundle",
    images = {
        "gcr.io/prysmaticlabs/prysm/beacon-chain:latest": ":image",
        "gcr.io/prysmaticlabs/prysm/beacon-chain:{DOCKER_TAG}": ":image",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:latest": ":image",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:{DOCKER_TAG}": ":image",
    },
    tags = ["manual"],
)

go_image_debug(
    name = "image_debug",
    image = ":image",
    tags = ["manual"],
)

container_bundle(
    name = "image_bundle_debug",
    images = {
        "gcr.io/prysmaticlabs/prysm/beacon-chain:latest-debug": ":image_debug",
        "gcr.io/prysmaticlabs/prysm/beacon-chain:{DOCKER_TAG}-debug": ":image_debug",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:latest-debug": ":image_debug",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:{DOCKER_TAG}-debug": ":image_debug",
    },
    tags = ["manual"],
)

go_image_alpine(
    name = "image_alpine",
    image = ":image",
    tags = ["manual"],
)

container_bundle(
    name = "image_bundle_alpine",
    images = {
        "gcr.io/prysmaticlabs/prysm/beacon-chain:latest-alpine": ":image_alpine",
        "gcr.io/prysmaticlabs/prysm/beacon-chain:{DOCKER_TAG}-alpine": ":image_alpine",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:latest-alpine": ":image_alpine",
        "index.docker.io/prysmaticlabs/prysm-beacon-chain:{DOCKER_TAG}-alpine": ":image_alpine",
    },
    tags = ["manual"],
)

docker_push(
    name = "push_images",
    bundle = ":image_bundle",
    tags = ["manual"],
)

docker_push(
    name = "push_images_debug",
    bundle = ":image_bundle_debug",
    tags = ["manual"],
)

docker_push(
    name = "push_images_alpine",
    bundle = ":image_bundle_alpine",
    tags = ["manual"],
)

go_binary(
    name = "beacon-chain",
    embed = [":go_default_library"],
    visibility = [
        "//beacon-chain:__subpackages__",
        "//endtoend:__pkg__",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["usage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//shared/featureconfig:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
