load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/prysmaticlabs/prysm/client",
    visibility = ["//client:__subpackages__"],
    deps = [
        "//client/node:go_default_library",
        "//client/types:go_default_library",
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

go_image(
    name = "image",
    srcs = ["main.go"],
    goarch = "amd64",
    goos = "linux",
    importpath = "github.com/prysmaticlabs/prysm/client",
    static = "on",
    tags = ["manual"],
    visibility = ["//visibility:private"],
    deps = [
        "//client/node:go_default_library",
        "//client/types:go_default_library",
        "//shared/cmd:go_default_library",
        "//shared/debug:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@com_github_x_cray_logrus_prefixed_formatter//:go_default_library",
    ],
)

container_push(
    name = "push_image",
    format = "Docker",
    image = ":image",
    registry = "gcr.io",
    repository = "prysmaticlabs/prysm/client",
    tag = "latest",
    tags = ["manual"],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//client:__subpackages__"],
)
