load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "defaults.go",
        "flags.go",
        "helpers.go",
        "password_reader.go",
        "wrap_flags.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/v3/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//config/params:go_default_library",
        "//io/file:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@com_github_urfave_cli_v2//altsrc:go_default_library",
        "@org_golang_x_crypto//ssh/terminal:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "config_test.go",
        "flags_test.go",
        "helpers_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//cmd/mock:go_default_library",
        "//config/params:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
