load("@prysm//tools/go:def.bzl", "go_library")

config_setting(
    name = "mainnet",
    flag_values = {
        "//proto:network": "mainnet",
    },
)

config_setting(
    name = "minimal",
    flag_values = {
        "//proto:network": "minimal",
    },
)

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)
