load("@prysm//tools/go:def.bzl", "go_library", "go_test")

config_setting(
    name = "mainnet",
    flag_values = {
        "//proto:network": "mainnet",
    },
)

config_setting(
    name = "minimal",
    flag_values = {
        "//proto:network": "minimal",
    },
)

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/yaml:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["util_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/params:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sirupsen_logrus//hooks/test:go_default_library",
    ],
)
