load("@io_bazel_rules_go//go:def.bzl", "go_test")

# gazelle:exclude geth_deps.go

go_test(
    name = "go_default_test",
    size = "large",
    testonly = True,
    srcs = [
        "endtoend_test.go",
        "minimal_e2e_test.go",
        "minimal_slashing_e2e_test.go",
    ],
    args = ["-test.v"],
    data = [
        "//cmd/beacon-chain",
        "//cmd/slasher",
        "//cmd/validator",
        "//tools/bootnode",
        "@com_github_ethereum_go_ethereum//cmd/geth",
    ],
    shard_count = 2,
    tags = [
        "block-network",
        "e2e",
        "manual",
        "minimal",
    ],
    deps = [
        "//beacon-chain/core/state:go_default_library",
        "//endtoend/components:go_default_library",
        "//endtoend/evaluators:go_default_library",
        "//endtoend/helpers:go_default_library",
        "//endtoend/params:go_default_library",
        "//endtoend/types:go_default_library",
        "//shared/params:go_default_library",
        "//shared/testutil:go_default_library",
        "//shared/testutil/assert:go_default_library",
        "//shared/testutil/require:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
